# syncsheet_finance

./: README.md  pyproject.toml  scrap.py
app/api/: request_fin_record.py
app/database/models/: finance_record.py
app/schemas/: financial_record.py
downloaded_files/: page.html  script_0.js  script_10.js  script_11.js  script_12.js  script_17.js  script_19.js  script_2.js  script_21.js  script_22.js  script_23.js  script_30.js  script_31.js  script_32.js  script_34.js  script_35.js  script_36.js  script_4.js  script_47.js  script_5.js  script_66.js  script_8.js  script_9.js  style_36.css
nemo-fin-scrap/: pyproject.toml
