[tool.poetry]
name = "syncfinance"
version = "0.1.0"
description = ""
authors = ["luismaiabr.np550xda <luismaiasombra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.5"
sqlalchemy = "^2.0.37"
pydantic-settings = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
